fixed invisible text bug

--- a/public/style.css
+++ b/public/style.css
@@ -36,6 +36,7 @@ font-family: 'Montserrat Alternates', sans-serif;
 .notes {
   background-color: black;
   margin-top: 5%;
+  color: white;
 }
 
 .rightSide {
